// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should render Card correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
}

<div
    class="c0"
    data-testid="card"
    variant="default"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Card tests should render Card with hover animation 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
  transition: box-shadow 0.2s ease-in-out;
}

.c0:hover {
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
}

<div
    class="c0"
    data-testid="card"
    variant="default"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Card tests should render Card with outline 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
  outline-offset: -1px;
  outline: 1px solid #276EF1;
}

<div
    class="c0"
    data-testid="card"
    variant="primary"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Card tests should render Card with style system utils 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  background-color: #FFFFFF;
  border-radius: 0.375rem;
  margin-bottom: 20px;
}

<div
    class="c0"
    data-testid="card"
    mb="20"
    variant="default"
  >
    Content
  </div>
</DocumentFragment>
`;
